# vkwaifu

./: .gitignore  LICENSE  README.md  meson.build
dep/inc/vulkan/: vulkan.hpp  vulkan_core.h
src/: frag.h  fs.frag.glsl  main.cpp  meson.build  stb_image.c  vert.h  volk.h  vs.vert.glsl  vulkanctx.cpp  vulkanctx.h
